Don't try to block personas that don't support blocking

https://bugzilla.gnome.org/show_bug.cgi?id=645488